# social_network

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
backend/config/: settings.py
backend/database/: core.py  dao.py  models.py
backend/dotinputs/: routers.py
backend/schemases/: schemases.py
backend/src/: main.py
backend/src/config/: settings.py
backend/src/database/: core.py  dao.py  models.py
backend/src/dotinputs/: handlers_errors.py  routers.py
backend/src/schemases/: schemases.py
frontend/: Dockerfile  nginx.conf
frontend/static/: index.html
instruction/: README.md
migrations/: env.py
migrations/versions/: 15855a8c379b_create_tables.py
requirements/: pyproject.toml
tests/: .env.example  conftest.py  docker-compose.yml  pytest.ini  serializers.py  test_data.py  test_database.py  test_endpoints.py
tests/db_test/: postmaster.pid
tests/db_test/base/1/: 1259  2619  2619_vm  2696  2840  2841
tests/db_test/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  2224  2224_vm  2579  2604  2604_vm  2606  2606_fsm  2606_vm  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2619  2619_fsm  2619_vm  2620  2620_vm  2656  2657  2658  2658_fsm  2659  2662  2663  2664  2665  2666  2667  2673  (+35 more)
tests/db_test/base/4/: 2619
tests/db_test/base/5/: 1247  1249  1259  1259_fsm  1259_vm  18808  18809  18814  18815  18817  18830  18836  (+41 more)
tests/db_test/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
tests/db_test/pg_xact/: 0000
(+62 files in other folders)
