[tool.poetry]
name = "requirements"
version = "0.1.0"
description = ""
authors = ["Пользователь <sashasergeevasus345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.3"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
sqlalchemy = "2.0.20"
asyncpg = "^0.29.0"
python-multipart = "0.0.9"
pydantic-settings = ">=2.2.1"
pydantic = ">=2.7.1"
alembic = "^1.13.1"
black = "^24.4.2"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-dotenv = "^0.5.2"
trio = "^0.25.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
